[gd_scene load_steps=10 format=2]

[ext_resource path="res://actors/enemy/Enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/enemies/slimeWalk1.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/enemies/slimeWalk2.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/enemies/slimeDead.png" type="Texture" id=4]
[ext_resource path="res://actors/enemy/DetectionArea.gd" type="Script" id=5]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "walk",
"speed": 3.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

extents = Vector2( 25.0098, 13.5762 )

[sub_resource type="RectangleShape2D" id=3]

extents = Vector2( 175.601, 10 )

[sub_resource type="RectangleShape2D" id=4]

extents = Vector2( 32.2083, 10 )

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.751038, -2.00275 )
frames = SubResource( 1 )
animation = "walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.751038, -1.75241 )
shape = SubResource( 2 )

[node name="DetectionArea" type="Area2D" parent="."]
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 3 )

[node name="DamageBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageBox"]
shape = SubResource( 4 )

[connection signal="player_found" from="DetectionArea" to="." method="_on_DetectionArea_player_found"]
[connection signal="body_entered" from="DamageBox" to="." method="_on_DamageBox_body_entered"]
[connection signal="body_exited" from="DamageBox" to="." method="_on_DamageBox_body_exited"]
